fix docker file