@@ -4,15 +4,17 @@ WORKDIR /app
 COPY pom.xml .
 COPY src ./src
 
-RUN mvn -B clean package -DskipTests
+RUN mvn -B clean package -DskipTests dependency:copy-dependencies
 
-FROM eclipse-temurin:17-jre
+FROM eclipse-temurin:17-jdk
 WORKDIR /app
 
 COPY --from=build /app/target/FuelConsumption-1.0-SNAPSHOT.jar app.jar
+COPY --from=build /app/target/dependency /app/dependency
 
-ENV DB_URL=jdbc:mariadb://db:3306/fuel_calculator_localization
+ENV DISPLAY=host.docker.internal:0
+ENV DB_URL=jdbc:mariadb://host.docker.internal:3317/fuel_calculator_localization
 ENV DB_USER=fuel_user
 ENV DB_PASSWORD=fuel_password
 
-CMD ["java", "-jar", "app.jar"]
+CMD ["java", "--module-path", "/app/dependency", "--add-modules", "javafx.controls,javafx.fxml", "-jar", "app.jar"]
